--- a/style.css
+++ b/style.css
@@ -2,84 +2,80 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 body{
     text-align: center;
-    background-color: rgb(41, 41, 41);
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(28, 28, 28);
 }
 h3{
     color: white;
-    margin-bottom: -1rem;
+    font-size:0.8rem
 }
 h1{
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(255, 0, 0);
-    border: 2px solid black;
-    box-shadow: 2px 2px 10px black;
-    width: 100%;
+    background-color: rgb(250, 41, 41);
+    font-size: 1.5rem;
+    box-shadow: 2px 2px 7px black;
     padding: 1rem;
     color: white;
+    margin:auto;
+    margin-top: 10px;
+    width: 250px;
+    border-radius: 0.3rem;
+}
+
+.stage{
+    width: auto;
+    display:flex;
+    align-items: center;
+    justify-content: center;
     margin: auto;
-    margin-bottom: 2rem;
-    margin-top: 2rem;
-    width: 400px;
-    border-radius: 1rem;
+    margin-top: -60px;
 }
 .square{
-    background-color:rgb(77, 77, 77);
-    box-shadow: 2px 2px 10px black;
-    width: 200px;
-    height: 200px;
-    border-radius: 1rem;
-    border: 2px solid rgb(0, 0, 0);
+    background-color:rgb(46, 46, 46);
+    margin: 1vh 0.5vh;
+    box-shadow: 2px 2px 7px black;
+    width: 22vh;
+    height: 22vh;
+    border-radius: 0.5vh;
     display: inline-block;
     cursor: pointer;
     transition-duration: 0.2s;
     transition-property: background-color;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
 .square:hover{
     background-color: rgb(104, 104, 104) ;
 }
-.o{
-    position:relative;
-}
+
 .o::after{
     content: "\2B55";
-    font-size: 100px;
-    line-height: 200px;
-    position: absolute;
-    top:0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    font-size: 70px;
+    line-height: 150px;
+   
     animation: opO 0.3s;
 }
-.x{
-    position:relative;
+#empate::after{
+    content: "Nenhum vencedor!";
 }
 .x::after{
     content: "\2716";
-    font-size: 150px;
-    line-height: 200px;
-    position: absolute;
-    top:0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    font-size: 100px;
+    line-height: 150px;
+    
     animation: opX 0.3s;
 }
 button{
-    font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(255, 0, 0);
-    border: 2px solid black;
-    box-shadow: 2px 2px 10px black;
-    width: 100%;
-    padding: 1rem;
+    box-shadow: 2px 2px 7px black;
+    border: none;
+    padding: 0.6rem;
     color: white;
-    margin-top: 2rem;
-    width: 200px;
-    border-radius: 1rem;
+    width: 150px;
+    border-radius: 0.3rem;
     font-size: 1rem;
     font-weight: 500;
     transition: 0.2s;
@@ -90,20 +86,16 @@ button:hover{
     cursor: pointer;
 }
 header{
-    display: flex;
-    flex-direction: row;  
-    align-items: center;
+    display: flex; 
     margin:auto;
     width: 90%;
     height: 185px;
 }
 h2{
     color:white;
-    position: static;
     margin: 0;
 }
 .points{
-    margin-top: 1rem;
     color: white;
     font-size: 3rem;
     font-weight: 700;
@@ -194,9 +186,12 @@ p{
          opacity: 0;
          font-size: 50px;
      }
+     80%{
+        font-size: 80px;
+     }
      100%{
          opacity: 1;
-         font-size: 100px;
+         font-size: 70px;
      }
  }
  @keyframes opX {
@@ -204,8 +199,11 @@ p{
         opacity: 0;
         font-size: 50px;
     }
+    80%{
+        font-size: 110px;
+     }
     100%{
         opacity: 1;
-        font-size: 150px;
+        font-size: 100px;
     }
 }
